// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots renders correctly with children 1`] = `
<ul
  aria-activedescendant="undefined--1"
  aria-label="Menu"
  className="menu monday-style-menu dummy-class-name medium monday-style-menu--medium"
  data-testid="menu"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOver={[Function]}
  role="menu"
  tabIndex={0}
>
  <div
    className="title monday-style-menu-title"
    data-testid="menu-title"
  >
    <label
      className="caption monday-style-menu-title__caption captionBottom monday-style-menu-title__caption--bottom"
      data-testid="menu-title"
    >
      my title
    </label>
  </div>
  <li
    aria-current={false}
    className="item monday-style-menu-item"
    data-testid="menu-item"
    onClick={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <div
      className="title monday-style-menu-item__title"
    >
      item 1
    </div>
    
    <div
      className="monday-style-menu-item__popover"
      style={
        Object {
          "left": "0",
          "position": "absolute",
          "top": "0",
          "visibility": "hidden",
        }
      }
    />
  </li>
  <li
    aria-current={false}
    className="item monday-style-menu-item"
    data-testid="menu-item"
    onClick={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <div
      className="title monday-style-menu-item__title"
    >
      item 2
    </div>
    
    <div
      className="monday-style-menu-item__popover"
      style={
        Object {
          "left": "0",
          "position": "absolute",
          "top": "0",
          "visibility": "hidden",
        }
      }
    />
  </li>
</ul>
`;

exports[`Snapshots renders correctly with custom class name 1`] = `
<ul
  aria-activedescendant="undefined--1"
  aria-label="Menu"
  className="menu monday-style-menu dummy-class-name medium monday-style-menu--medium"
  data-testid="menu"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOver={[Function]}
  role="menu"
  tabIndex={0}
/>
`;

exports[`Snapshots renders correctly with empty props 1`] = `
<ul
  aria-activedescendant="undefined--1"
  aria-label="Menu"
  className="menu monday-style-menu medium monday-style-menu--medium"
  data-testid="menu"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOver={[Function]}
  role="menu"
  tabIndex={0}
/>
`;
